5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1662_1398.log
== TEST (2019-04-15 15:43:13) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:28) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:41) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100300)),2))
-- OUTPUT:
12141300.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:58) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:06) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:44:07) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- EXECUTION TIME:
0.12593
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:

-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:07) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:07) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:17) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:44:20) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:49) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+(200*100)+((x-200)*90),2))
-- ERROR:
File "XXXX", line 7
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:13) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+(200*100)+((x-200)*90),2))
-- ERROR:
File "XXXX", line 7
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:14) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+(200*100)+((x-200)*90),2))
-- ERROR:
File "XXXX", line 7
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:14) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+(200*100)+((x-200)*90),2))
-- ERROR:
File "XXXX", line 7
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:48:15) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+(200*100)+((x-200)*90),2))
-- EXECUTION TIME:
0.255866
-- ERROR:
  File "/home/codebench/codes/1662/1398/main.py", line 7
    
                                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:15) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+(200*100)+((x-200)*90),2))
-- ERROR:
File "XXXX", line 7
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:39) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+(200*100)+((x-200)*90),2)
-- ERROR:
File "XXXX", line 7
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:49:23) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(int(round((5000+(x*100)),2)))
else:
	print(int(round((8000+(200*100)+((x-200)*90),2)))
-- ERROR:
File "XXXX", line 7
    
                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:28) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+20000+(x-200)*90),2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:52:35) 
-- CODE:
x= float(input("tempo:"))

if(x<=200):
	print(round((5000+(x*100)),2))
else:
	print(round((8000+20000+(x-200)*90),2))
-- EXECUTION TIME:
0.19376
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
